2008-12-03  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclFileName.c (TclDoGlob):	One of the 
	Tcl_FSMatchInDirectory() calls did not have its return code
	checked.  Some VFS drivers can return TCL_ERROR, and when that's
	not checked, the error message gets converted into a list of
	matching files returned by [glob], with ridiculous results.

2008-12-01  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclIO.c (TclFinalizeIOSubsystem): Revised latest commit to
	something that doesn't crash the test suite.

2008-11-25  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c (TclFinalizeIOSubsystem): Applied backport of
	  Alexandre Ferrieux's patch for [Bug 2270477] to prevent infinite
	  looping during finalization of channels not bound to
	  interpreters.

2008-08-23  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c: Backport of fix for [Bug 2333466].

2008-11-04  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclPort.h: remove the ../{win,unix}/ header dirs as the
	build system already has it, and it confuses builds when used with
	private headers installed.

2008-09-25  Don Porter  <dgp@users.sourceforge.net>

	* doc/global.n:	Correct false claim about [info locals].

2008-08-14  Don Porter  <dgp@users.sourceforge.net>

	* tests/fileName.test:	Revise new tests for portability to case
	insensitive filesystems.

2008-08-14  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tclCompile.h:		add support for debug logging of DTrace
	* generic/tclBasic.c:		'proc', 'cmd' and 'inst' probes (does
					_not_ require a platform with DTrace).

	* unix/Makefile.in:		ensure Makefile shell is /bin/bash for
	* unix/configure.in (SunOS):	DTrace-enabled build on Solaris.
					(followup to 2008-06-12) [Bug 2016584]

	* unix/tcl.m4 (SC_PATH_X):	check for libX11.dylib in addition to
					libX11.so et al.

	* unix/configure: 		autoconf-2.13

2008-08-13  Don Porter  <dgp@users.sourceforge.net>
